--- a/desafioDomEventosGrondonaFacundo/index.html
+++ b/desafioDomEventosGrondonaFacundo/index.html
@@ -25,7 +25,15 @@
               <h2>Instrucciones</h2>
             <p>Tienes 3 vidas para darle clik con el mouse en el centro a cualquiera de los blacos.</p>
             <p>Estar Preparado???</p>
-            <h3 id="puntostotales"> </h3>
+            <div  class="centro">
+              <h3>Vidas</h3>
+              <h3 id="vS"> 3 </h3>
+          </div>
+            
+            <div  class="centro">
+              <h3>Puntos</h3>
+              <h3 id="pts">0 </h3>
+          </div>
             <div  class="centro">
                 <button  id="otraVez" type="button" class="btn btn-primary margen">  Jugar de nuevo </button>
                 
